--- a/PryEjercicio/PryEjercicio.csproj
+++ b/PryEjercicio/PryEjercicio.csproj
@@ -180,6 +180,12 @@
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BEUEjercicio\BEUEjercicio.csproj">
+      <Project>{6b7d18a3-7fa3-432c-b03b-fad97cfebc73}</Project>
+      <Name>BEUEjercicio</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
