--- a/BEUEjercicio/BEUEjercicio.csproj
+++ b/BEUEjercicio/BEUEjercicio.csproj
@@ -82,6 +82,8 @@
       <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Queries\AlumnoQBLL.cs" />
+    <Compile Include="Transactions\AlumnoTBLL.cs" />
   </ItemGroup>
   <ItemGroup>
     <EntityDeploy Include="Model1.edmx">
@@ -111,5 +113,6 @@
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
