--- a/BEUEjercicio/BEUEjercicio.csproj
+++ b/BEUEjercicio/BEUEjercicio.csproj
@@ -82,8 +82,10 @@
       <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Queries\AlumnoQBLL.cs" />
-    <Compile Include="Transactions\AlumnoTBLL.cs" />
+    <Compile Include="Transactions\AlumnoBLL.cs" />
+    <Compile Include="Transactions\AreaBLL.cs" />
+    <Compile Include="Transactions\MateriaBLL.cs" />
+    <Compile Include="Transactions\MatriculaBLL.cs" />
   </ItemGroup>
   <ItemGroup>
     <EntityDeploy Include="Model1.edmx">
